- add Xlint to all compile targets - fix various warnings and deprecations
git-svn-id: https://svn.mkgmap.org.uk/mkgmap/mkgmap@4798 25d90789-57f7-4ee0-8453-03a3dfeeeb22